# uniget-screenshots

./: CHANGELOG.md  Cargo.toml  README.md  justfile
.github/: FUNDING.yml
.github/workflows/: build.yml  clippy.yml  publish.yml
src/: lib.rs  v1.rs  v2.rs
tests/: v1.rs  v2.rs
