[package]
description = "Data structures for working with the UniGetUI screenshots database"
edition = "2021"
include = ["src/**/*", "Cargo.toml", "README.md", "CHANGELOG.MD", "tests/**/*"]
license = "Apache-2.0"
name = "uniget-screenshots"
repository = "https://github.com/winpax/uniget-screenshots"
version = "0.1.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
